@@ -62,19 +62,18 @@ public class ChargesApiSteps {
     @Autowired
     private ChargesRepository chargesRepository;
 
-    String companyNumber = "08124207";
-    String chargeId = "AbRiNTU3NjNjZWI1Y2YxMzkzYWY3MzQ0YzVlOTg4ZGVhZTBkYWI4Ng==";
-    String insolvency_cases_happy_path_input = "Insolvency_cases_Happy_Path_input";
-    String invalid_payload = "Invalid_payload";
-    String x_request_value = "5234234234";
-    String x_request_id = "x-request-id";
+    private static final String COMPANY_NUMBER = "08124207";
+    private static final String CHARGE_ID = "AbRiNTU3NjNjZWI1Y2YxMzkzYWY3MzQ0YzVlOTg4ZGVhZTBkYWI4Ng==";
+    private static final String INSOLVENCY_CASES_HAPPY_PATH_INPUT = "Insolvency_cases_Happy_Path_input";
+    private static final String INVALID_PAYLOAD = "Invalid_payload";
+    private static final String X_REQUEST_VALUE = "5234234234";
+    private static final String X_REQUEST_ID = "x-request-id";
 
     static InternalChargeApi companyCharge;
 
     @Before
     public static void before_each() {
         WiremockTestConfig.setupWiremock();
-        //CucumberFeaturesRunnerITest.start();
         companyCharge = null;
     }
 
@@ -106,7 +105,6 @@ public class ChargesApiSteps {
 
     @Given("i create a company charges record in DB from file {string} for company number {string} and charge id {string}")
     public void addChargesToDBFromFile(String fileName, String companyNumber, String chargeId) {
-        InternalChargeApi companyCharge = null;
         File file = new FileSystemResource(
             "src/itest/resources/payload/input/" + fileName + ".json").getFile();
         try {
@@ -115,7 +113,7 @@ public class ChargesApiSteps {
             fail("Failed to read Company Charge File '" + fileName +"'");
         }
         String uri = "/company/{company_number}/charge/{charge_id}/internal";
-        ResponseEntity<Void> response = restTemplate.exchange(uri, HttpMethod.PUT, getSecurityForRequest(companyCharge),
+        restTemplate.exchange(uri, HttpMethod.PUT, getSecurityForRequest(companyCharge),
             Void.class, companyNumber, chargeId);
     }
 
@@ -124,14 +122,14 @@ public class ChargesApiSteps {
         HttpEntity request = getSecurityForRequest(companyCharge);
         String uri = "/company/{company_number}/charge/{charge_id}/internal";
         ResponseEntity<Void> response = restTemplate.exchange(uri, HttpMethod.PUT, request, Void.class, inCompanyNumber, inChargeId);
-        CucumberContext.CONTEXT.set("statusCode", response.getStatusCodeValue());
+        CucumberContext.CONTEXT.set("statusCode", response.getStatusCode().value());
     }
 
     private HttpEntity getSecurityForRequest(Object body){
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
         headers.setAccept(Collections.singletonList(MediaType.APPLICATION_JSON));
-        headers.set(x_request_id, x_request_value);
+        headers.set(X_REQUEST_ID, X_REQUEST_VALUE);
 
         headers.set("ERIC-Identity" , "SOME_IDENTITY");
         headers.set("ERIC-Identity-Type", "key");
@@ -143,7 +141,7 @@ public class ChargesApiSteps {
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
         headers.setAccept(Collections.singletonList(MediaType.APPLICATION_JSON));
-        headers.set(x_request_id, x_request_value);
+        headers.set(X_REQUEST_ID, X_REQUEST_VALUE);
 
         return new HttpEntity(null, headers);
     }
@@ -152,7 +150,7 @@ public class ChargesApiSteps {
     public void i_send_get_request_with_parameters(String companyNumber, String chargeId) {
         String uri = "/company/{company_number}/charges/{charge_id}";
         ResponseEntity<ChargeApi> response = restTemplate.exchange(uri, HttpMethod.GET, getSecurityForRequest(null), ChargeApi.class, companyNumber, chargeId);
-        CucumberContext.CONTEXT.set("statusCode", response.getStatusCodeValue());
+        CucumberContext.CONTEXT.set("statusCode", response.getStatusCode().value());
         CucumberContext.CONTEXT.set("getChargeDetailsResponseBody", response.getBody());
     }
 
@@ -173,7 +171,7 @@ public class ChargesApiSteps {
 
         RestClientException exception = assertThrows(RestClientException.class,
             () -> restTemplate.exchange(uri, HttpMethod.GET, getNullRequest(), ChargeApi.class,
-                companyNumber, chargeId));
+                companyNumber, CHARGE_ID));
         String exceptionMessage = exception.getMessage();
         CucumberContext.CONTEXT.set("exceptionMessageText", exceptionMessage);
     }
@@ -182,7 +180,7 @@ public class ChargesApiSteps {
     public void i_send_get_request_with_parameters(String companyNumber) {
         String uri = "/company/{company_number}/charges";
         ResponseEntity<ChargesApi> response = restTemplate.exchange(uri, HttpMethod.GET, getSecurityForRequest(null), ChargesApi.class, companyNumber);
-        CucumberContext.CONTEXT.set("statusCode", response.getStatusCodeValue());
+        CucumberContext.CONTEXT.set("statusCode", response.getStatusCode().value());
         CucumberContext.CONTEXT.set("getChargesResponseBody", response.getBody());
     }
 
@@ -194,7 +192,7 @@ public class ChargesApiSteps {
 
         Assertions.assertThat(chargesDocuments).hasSize(1);
 
-        ChargesDocument actual = chargesDocuments.get(0);
+        ChargesDocument actual = chargesDocuments.getFirst();
 
         assertThat(actual).isNotNull();
 
@@ -204,8 +202,8 @@ public class ChargesApiSteps {
 
         expected.getData().setEtag(actual.getData().getEtag());
 
-        assertThat(actual.getId()).isEqualTo(chargeId);
-        assertThat(actual.getCompanyNumber()).isEqualTo(companyNumber);
+        assertThat(actual.getId()).isEqualTo(CHARGE_ID);
+        assertThat(actual.getCompanyNumber()).isEqualTo(COMPANY_NUMBER);
         assertThat(actual.getData()).isEqualTo(expected.getData());
         verify(moreThanOrExactly(1), postRequestedFor(urlEqualTo("/private/resource-changed")));
     }
@@ -258,9 +256,9 @@ public class ChargesApiSteps {
 
     @When("PUT Rest endpoint is invoked with a valid json payload but Repository throws an error")
     public void put_rest_endpoint_is_invoked_with_a_valid_json_payload_but_repository_throws_an_error() {
-        readCompanyChargeFile(insolvency_cases_happy_path_input);
-        i_send_put_request_for_company_number_and_charge_id_with_payload(companyNumber,
-                chargeId);
+        readCompanyChargeFile(INSOLVENCY_CASES_HAPPY_PATH_INPUT);
+        i_send_put_request_for_company_number_and_charge_id_with_payload(COMPANY_NUMBER,
+                CHARGE_ID);
     }
 
     @Then("Rest endpoint returns http response code {int} to the client")
@@ -276,24 +274,25 @@ public class ChargesApiSteps {
 
     @When("PUT Rest endpoint is invoked with a random invalid payload that fails to de-serialised into Request object")
     public void put_rest_endpoint_is_invoked_with_a_random_invalid_payload_that_fails_to_de_serialised_into_request_object() {
-        HttpEntity request = getSecurityForRequest(chargeId);
+        HttpEntity request = getSecurityForRequest(CHARGE_ID);
         String uri = "/company/{company_number}/charge/{charge_id}/internal";
-        ResponseEntity<Void> response = restTemplate.exchange(uri, HttpMethod.PUT, request, Void.class, companyNumber, chargeId);
-        CucumberContext.CONTEXT.set("statusCode", response.getStatusCodeValue());
+        ResponseEntity<Void> response = restTemplate.exchange(uri, HttpMethod.PUT, request, Void.class, COMPANY_NUMBER,
+                CHARGE_ID);
+        CucumberContext.CONTEXT.set("statusCode", response.getStatusCode().value());
     }
 
     @When("PUT Rest endpoint is invoked with a valid json payload that causes a NPE")
     public void put_rest_endpoint_is_invoked_with_a_valid_json_payload_that_causes_a_npe() {
-        readCompanyChargeFile(invalid_payload);
-        i_send_put_request_for_company_number_and_charge_id_with_payload(companyNumber,
-                chargeId);
+        readCompanyChargeFile(INVALID_PAYLOAD);
+        i_send_put_request_for_company_number_and_charge_id_with_payload(COMPANY_NUMBER,
+                CHARGE_ID);
     }
 
     @When("PUT Rest endpoint is invoked with a valid json payload")
     public void put_rest_endpoint_is_invoked_with_a_valid_json_payload() {
-        readCompanyChargeFile(insolvency_cases_happy_path_input);
-        i_send_put_request_for_company_number_and_charge_id_with_payload(companyNumber,
-                chargeId);
+        readCompanyChargeFile(INSOLVENCY_CASES_HAPPY_PATH_INPUT);
+        i_send_put_request_for_company_number_and_charge_id_with_payload(COMPANY_NUMBER,
+                CHARGE_ID);
     }
 
     @Then("MongoDB is successfully updated")
@@ -304,7 +303,7 @@ public class ChargesApiSteps {
     @Then("Data is not updated into Mongo DB")
     public void data_is_not_updated_into_mongo_db() {
         List<ChargesDocument> chargesDocuments = chargesRepository.findAll();
-        Assertions.assertThat(chargesDocuments).hasSize(0);
+        Assertions.assertThat(chargesDocuments).isEmpty();
     }
 
     @Then("Data is updated in Mongo DB")
@@ -331,7 +330,7 @@ public class ChargesApiSteps {
 
         ResponseEntity<Void> response = restTemplate.exchange(uri, HttpMethod.PUT, getNullRequest(),
             Void.class, companyNumber, chargeId);
-        CucumberContext.CONTEXT.set("statusCode", response.getStatusCodeValue());
+        CucumberContext.CONTEXT.set("statusCode", response.getStatusCode().value());
     }
 
 
@@ -342,7 +341,7 @@ public class ChargesApiSteps {
 
         ResponseEntity<Void> response = restTemplate.exchange(uri, HttpMethod.DELETE, getNullRequest(),
             Void.class, companyNumber, chargeId);
-        CucumberContext.CONTEXT.set("statusCode", response.getStatusCodeValue());
+        CucumberContext.CONTEXT.set("statusCode", response.getStatusCode().value());
     }
 
     @Given("the company charge exists for charge id {string}")
@@ -351,7 +350,7 @@ public class ChargesApiSteps {
         FileSystemResource file = new FileSystemResource("src/itest/resources/payload/input/" + id + ".json");
         Document document = readData(file);
         ChargesDocument chargesDocument = mongoCustomConversions.convertValue(document, ChargesDocument.class);
-        chargesDocument.setId(id); chargesDocument.setCompanyNumber(companyNumber);
+        chargesDocument.setId(id); chargesDocument.setCompanyNumber(COMPANY_NUMBER);
         chargesRepository.save(chargesDocument);
         assertNotNull(chargesRepository.findById(id));
     }
@@ -363,7 +362,7 @@ public class ChargesApiSteps {
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
         headers.setAccept(Collections.singletonList(MediaType.APPLICATION_JSON));
-        headers.set(x_request_id, x_request_value);
+        headers.set(X_REQUEST_ID, X_REQUEST_VALUE);
         headers.set("ERIC-Identity" , "SOME_IDENTITY");
         headers.set("ERIC-Identity-Type", "key");
         headers.set("ERIC-Authorised-Key-Privileges", "internal-app");
@@ -371,7 +370,7 @@ public class ChargesApiSteps {
 
         ResponseEntity<Void> response = restTemplate.exchange(uri, HttpMethod.DELETE, request, Void.class, companyNumber, chargeId);
 
-        CucumberContext.CONTEXT.set("statusCode", response.getStatusCodeValue());
+        CucumberContext.CONTEXT.set("statusCode", response.getStatusCode().value());
     }
 
     @Then("the CHS Kafka API is invoked successfully with delete event payload {string}")
@@ -379,9 +378,8 @@ public class ChargesApiSteps {
 
         File file = new FileSystemResource("src/itest/resources/payload/input/" + payload + ".json").getFile();
         List<ServeEvent> serverEvents = WiremockTestConfig.getServeEvents();
-        assertThat(serverEvents.size()).isEqualTo(1);
-        assertThat(serverEvents.isEmpty()).isFalse();
-        String requestReceived = serverEvents.get(0).getRequest().getBodyAsString();
+        assertThat(serverEvents).hasSize(1);
+        String requestReceived = serverEvents.getFirst().getRequest().getBodyAsString();
 
         ChangedResource expectedChangedResource = mongoCustomConversions.readValue(file, ChangedResource.class);
         ChangedResource actualChangedResource = mongoCustomConversions.convertValue(Document.parse(requestReceived), ChangedResource.class);
@@ -396,12 +394,12 @@ public class ChargesApiSteps {
     public void i_send_get_request_with_company_number_and_charge_id(String companyNumber, String chargeId) {
         String uri = "/company/{company_number}/charges/{charge_id}";
         ResponseEntity<ChargesApi> response = restTemplate.exchange(uri, HttpMethod.GET, getSecurityForRequest(null), ChargesApi.class, companyNumber, chargeId);
-        CucumberContext.CONTEXT.set("statusCode", response.getStatusCodeValue());
+        CucumberContext.CONTEXT.set("statusCode", response.getStatusCode().value());
         CucumberContext.CONTEXT.set("getChargesResponseBody", response.getBody());
     }
 
     @Then("charge id {string} does not exist in mongo db")
-    public void charge_id_does_not_exist_in_mongo_db(String chargeId) throws IOException {
+    public void charge_id_does_not_exist_in_mongo_db(String chargeId) {
         assertFalse(chargesRepository.findById(chargeId).isPresent());
     }
 
@@ -411,7 +409,7 @@ public class ChargesApiSteps {
     }
 
     @Then("charge id {string} exist in mongo db")
-    public void charge_id_exist_in_mongo_db(String chargeId) throws IOException {
+    public void charge_id_exist_in_mongo_db(String chargeId) {
         Assert.assertTrue(chargesRepository.findById(chargeId).isPresent());
     }
 
